src/css/App.css
@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
@import url("Mini.css");
@import url("Archive.css");
@import url("Overrides.css");

* {
  font-family: "Noto Sans", sans-serif !important;
}

:root {
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light;
  accent-color: #000000;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --highlight: #a7d8ff;
  --clue-highlight: var(--highlight);
  --select: #ffda00;
  --correct: #2860d8;
  --incorrect: #e63333;
  --icon-button: #909090;

  --shaded: #d3d3d3;
  --shaded-select: #f3db4d;
  --shaded-highlight: #bad9f3;
  --shaded-related: #e8e2c7;

  --related: #ffeca0;
  --related-highlighted: #c6dfde;

  --rs-btn-primary-bg: black !important;
  --rs-btn-primary-hover-bg: black !important;
  --rs-btn-primary-active-bg: black !important;
}

.merriweather-bold {
  font-family: "Merriweather", serif !important;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

.merriweather-display {
  font-family: "Merriweather", serif !important;
  font-optical-sizing: auto;
  font-weight: 900;
  font-style: normal;
}

:root.dark {
  color-scheme: dark;
  --highlight: #90caf93d;
  --select: #90caf986;
  --clue-highlight: #0d47a1;
  --correct: #64b5f6;
}

.lucide {
  box-sizing: content-box;
  display: inline-block;
  overflow: visible;
  height: 1em;
  vertical-align: -0.125em;
  width: 1.25em;
}

.szh-menu-container .lucide {
  margin-inline-end: 5px;
}

.hidden {
  display: none;
}
.invisible {
  visibility: hidden;
}

.block {
  display: block;
  width: 100%;
}

.centered {
  text-align: center;
}

.auto-center {
  margin-inline: auto;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

#root {
  width: 65vw;
  margin: 0 auto;
  padding: 2rem;
}

canvas {
  z-index: 999999 !important;
}

.rs-modal-backdrop {
  /* Rain pattern */
  background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox='0 0 12 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 .99C4 .445 4.444 0 5 0c.552 0 1 .45 1 .99v4.02C6 5.555 5.556 6 5 6c-.552 0-1-.45-1-.99V.99zm6 8c0-.546.444-.99 1-.99.552 0 1 .45 1 .99v4.02c0 .546-.444.99-1 .99-.552 0-1-.45-1-.99V8.99z' fill='%23000000' fill-opacity='0.02' fill-rule='evenodd'/%3E%3C/svg%3E");
}

.rs-modal-backdrop:has(+ .rs-modal-wrapper > .pause-modal) {
  backdrop-filter: blur(9px);
  background-color: rgb(from var(--rs-gray-900) r g b / 40%);
  /* Redaction pattern */
  background-image: url("data:image/svg+xml,%3Csvg width='50' height='10' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='%23000000' fill-opacity='0.1' fill-rule='evenodd'/%3E%3C/svg%3E");
}

.pause-time {
  font-size: 16px;
}

.bottom-icons {
  position: fixed;
  bottom: 0;
  right: 0;
  padding: 10px;
}

.bottom-icons svg {
  color: var(--icon-button);
  transition: color 250ms;
  cursor: pointer;
  font-size: 1.5em;
  margin-inline-end: 10px;
}
.bottom-icons svg:last-child {
  margin-inline-end: 0;
}
.bottom-icons svg:hover {
  color: black;
}
.dark .bottom-icons svg:hover {
  color: white;
}

/* Move bottom icons to the top when the keyboard is present */
.keyboard-container:has(.react-simple-keyboard:not(.hidden)) .bottom-icons {
  top: 0;
  height: fit-content;
}

.action-link {
  text-decoration: underline;
  cursor: pointer;
  user-select: none;
}

.rating-container {
  margin-inline: auto;
}
.rating-container .rs-text {
  text-align: center;
  width: 100%;
}

.rating-container:focus,
.rs-rate:focus {
  outline: none;
}

.modal-title {
  transform: translateY(-7px);
}

.nudge {
  width: 280px;
  .rs-text {
    text-align: left;
  }
  .nudge-cta {
    .rs-btn[data-appearance="subtle"] {
      padding: 0;
      &:hover {
        background-color: transparent;
      }
    }
  }
}

.icon-bg {
  background-size: 42px;
  background-position: -3px -3px;
  background-blend-mode: overlay;
}

.leaderboard-nudge {
  background-image: url("/icons/trophy-bg.svg");
}

.friends-nudge {
  background-image: url("/icons/users-bg.svg");
}

.custom-puzzle-nudge {
  background-image: url("/icons/star-bg.svg");
}

.notifications-nudge {
  background-image: url("/icons/bell-bg.svg");
}

.answer-input-box {
  flex-grow: 1;
  text-align: center;
}

.category-dropdown .rs-dropdown-toggle {
  background-color: rgba(255, 255, 255, 0.6);
}

.custom-puzzle-list {
  width: min(95vw, 400px);

  & > .rs-stack-column {
    width: 100%;

    & > .rs-list {
      width: 100%;
    }
  }
}

